fix: GraalVM Vert.x - simplify pom.xml (maven-shade-plugin only)